# gifmonster

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/instructions/: rust-conventions.instructions.md
.github/workflows/: gifmonster-node-ci.yml  gifmonster-node-publish.yml
docs/: release-node.md
docs/superpowers/plans/: 2026-04-18-v0.2.0-release-hardening.md
docs/superpowers/specs/: 2026-04-18-gifmonster-roadmap-design.md
gifmonster-cli/: Cargo.toml
gifmonster-cli/src/: main.rs
gifmonster-core/: Cargo.toml
gifmonster-core/src/: config.rs  dither.rs  encode.rs  extract.rs  lib.rs  quantize.rs  types.rs
gifmonster-node/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
gifmonster-node/__test__/: index.test.mjs  release-readiness.test.mjs  release-workflow-contract.test.mjs
gifmonster-node/npm/darwin-arm64/: package.json
gifmonster-node/npm/darwin-x64/: package.json
gifmonster-node/npm/linux-x64-gnu/: package.json
gifmonster-node/npm/linux-x64-musl/: package.json
gifmonster-node/npm/win32-x64-msvc/: package.json
gifmonster-node/scripts/: release-readiness.mjs
gifmonster-node/src/: lib.rs
